--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<table border="1" width="60px">
+<table border="1" width="40%">
 	<thead>
 		<tr>
 		<th>NAME</th>
