--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1>Student Details</h1>
 <table border="1" width="40%">
 	<thead>
 		<tr>
