--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <h1>Student Details</h1>
-<table border="1" width="40%">
+<table border="1" width="40%" length="1px">
 	<thead>
-		<tr>
+		<tr length="1px">
 		<th>NAME</th>
 		<th>AGE</th>
 		<th>BRANCH</th>
