--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1>Student Details</h1>
+	<caption id="Caption">Student Details</caption>
 <table border="1" width="40%" length="1px">
 	<thead>
 		<tr length="1px">
