--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<caption id="Caption">Student Details</caption>
-<table border="1" width="40%" length="1px">
+	
+<table border="1" width="40%" length="1px" height="40px">
+	<caption id="Caption">Student details</caption>
 	<thead>
 		<tr length="1px">
 		<th>NAME</th>
