--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	
 <table border="1" width="40%" length="1px" height="40px">
-	<caption id="Caption">Student details</caption>
+	<caption id="Caption">Student Details</caption>
 	<thead>
 		<tr length="1px">
 		<th>NAME</th>
